# aoc-2022-c

./: .gitignore  CMakeLists.txt  README.md
000/: CMakeLists.txt  Readme.md  part1.c  part2.c
001/: CMakeLists.txt  Readme.md  part1.c  part2.c
002/: CMakeLists.txt  part1.c  part2.c
003/: CMakeLists.txt  part1.c  part2.c
004/: CMakeLists.txt  Readme.md  part1.c  part2.c
005/: CMakeLists.txt  Readme.md  part1.c  part1.h  part2.c  part2.h  partX.h
007/: CMakeLists.txt  main.c  part1.c  part2.c  partx.h
009/: CMakeLists.txt  part1.c  part2.c  test.txt
099/: CMakeLists.txt  Readme.md  main.c  part1.c
2022/001/: part1.c
2022/002/: part1.c  part2.c
2022/004/: part1.c  part2.c
2022/005/: part1.c  part2.c  partx.h
2022/007/: part1.c  part2.c  partx.h
2022/009/: part1.c  part2.c
2025/: CMakeLists.txt
2025/000/: part1.c  part2.c
2025/001/: part2.c
2025/003/: main.c  part1.c  partx.h
2025/004/: CMakeLists.txt  Readme.md  part1.c  part2.c  partx.h
2025/005/: CMakeLists.txt  main.c  part1.c  part2.c  partx.h
lib/: CMakeLists.txt  aoc_array.c  aoc_linked_list.c  aoc_numeric.c  aoc_parser.c  aoc_ranges.c  aoc_ring_buffer.c  aoc_solution.c  aoc_stack.c  aoc_tree.c
lib/2d_engine/: cursor.c  engine.c  input.c  objects.c  tools.c
lib/2d_engine/experimental/: engine.c
lib/2d_engine/inc/: eng_types.h  engine.h
lib/cmake/: CMakeLists.txt
lib/inc/: ansi_cmd.h  ansi_fmt.h  aoc_2d_engine.h  aoc_helpers.h  aoc_input.h  aoc_iterator.h  aoc_linked_list.h  aoc_numeric.h  aoc_parser.h  aoc_ranges.h  aoc_ring_buffer.h  aoc_stack.h  aoc_threads_helpers.h  aoc_tree.h  aoc_types.h  arch.h
lib/linked_lists/: ll_defines.h  ll_types.h
lib/pretty/: aoc_pretty_printers.py
lib/tests/: CMakeLists.txt  Readme.md  test_linked_lists.c  test_ring_buffer.c  test_suite.c  test_tree.c
